Sutter Health/src/objects/S3_Participant__c.object
<CustomObject>
    <description>Lean event participate</description>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>Workshop_Participant__r.Employee_Affiliate_Facility__c</formula>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Workshop_Participant__r.Employee_Department__c</formula>
        <inlineHelpText>Sutter Department (from Lawson data)</inlineHelpText>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Type__c</fullName>
        <label>Participant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KPO</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Workshop Lead</fullName>
                </value>
                <value>
                    <fullName>Team Lead</fullName>
                </value>
                <value>
                    <fullName>Team Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S3Workshop__c</fullName>
        <label>S3 Workshop</label>
        <referenceTo>S3_Workshop__c</referenceTo>
        <relationshipName>S3_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <formula>Workshop_Participant__r.Employee_Supervisor_Name__c</formula>
        <label>Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Workshop_Participant__r.Employee_Job_Code_Description__c</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workshop_Name__c</fullName>
        <formula>S3Workshop__r.Workshop_Name__c</formula>
        <label>Workshop Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workshop_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workshop Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>S3_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workshop_Sponsor__c</fullName>
        <formula>S3Workshop__r.Sponsor__c</formula>
        <label>Workshop Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workshop_Start_Date__c</fullName>
        <formula>S3Workshop__r.Workshop_Start_Date__c</formula>
        <label>Workshop Start Date</label>
        <type>Date</type>
    </fields>
    <label>Workshop Participant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S3P-{00000}</displayFormat>
        <label>S3 Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3 Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>